--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "betterScripts": {
     "start-dev": {
-      "command": "node bin/server.js",
+      "command": "webpack-dev-server --inline --hot --config webpack/webpack.config.js",
       "env": {
         "NODE_ENV": "development"
       }
@@ -62,6 +62,7 @@
     "style-loader": "^0.13.1",
     "webpack": "^1.13.2",
     "webpack-dev-middleware": "^1.8.4",
+    "webpack-dev-server": "^1.16.2",
     "webpack-hot-middleware": "^2.13.0",
     "webpack-merge": "^0.15.0",
     "whatwg-fetch": "^1.0.0"
