--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npm run start-dev",
     "start-dev": "better-npm-run start-dev",
-    "dist": "better-npm-run dist"
+    "build": "better-npm-run build"
   },
   "betterScripts": {
     "start-dev": {
@@ -16,11 +16,8 @@
         "NODE_ENV": "development"
       }
     },
-    "dist": {
-      "command": "webpack --config webpack/webpack.config.js",
-      "env": {
-        "NODE_ENV": "production"
-      }
+    "build": {
+      "command": "webpack --config webpack/webpack.config.js"
     }
   },
   "keywords": [
