--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "author": "jc",
   "license": "ISC",
   "dependencies": {
+    "font-awesome": "^4.6.3",
     "normalize.css": "^5.0.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
@@ -64,6 +65,7 @@
     "raw-loader": "^0.5.1",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "webpack": "^1.13.2",
     "webpack-dev-middleware": "^1.8.4",
     "webpack-dev-server": "^1.16.2",
