--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "license": "ISC",
   "dependencies": {
     "font-awesome": "^4.6.3",
+    "jsx-to-string": "^0.2.16",
     "moment": "^2.15.2",
     "normalize.css": "^5.0.0",
     "react": "^15.3.2",
