--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "license": "ISC",
   "dependencies": {
     "classname": "0.0.0",
+    "flexboxgrid": "^6.3.1",
     "font-awesome": "^4.6.3",
     "jsx-to-string": "^0.2.16",
     "moment": "^2.15.2",
